# ACV_final_project_new

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
docs/superpowers/specs/: 2026-05-26-eval-vdo-prev-design.md
scripts/: download_llama.py  download_llama32_1b.py  download_llama32_3b.py  eval_baseline.py  eval_prev.py  extract_features.py  generate_prev_predictions.py  qualitative_compare.py  test_single_video.py  train.py  train_baseline.py  train_video_prev.py
src/: __init__.py
src/data/: how2sign_datamodule.py  how2sign_lmdb_dataset.py
src/dataset/: __init__.py  preprocessing.py
src/models/: projector.py  visual_llm_baseline.py  visual_llm_litmodule.py  visual_prev_llm.py
src/training/: metrics.py  train_utils.py
tests/: smoke_test_training.py  test_eval_baseline.py  test_extract_features.py  test_generate_prev_predictions.py  test_how2sign_lmdb_dataset.py  test_lightning_module.py  test_metrics.py  test_projector.py  test_qualitative_compare.py  test_train_tensorboard.py  test_train_utils.py  test_train_video_prev.py  test_visual_llm_baseline.py  test_visual_prev_llm.py
