[project]
name = "acv-final-project-new"
version = "0.1.0"
description = "Context-aware sign language translation for How2Sign"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.6.0+cu124 ; sys_platform == 'linux'",
    "torchvision==0.21.0+cu124 ; sys_platform == 'linux'",
    "transformers==4.57.6",
    "decord==0.6.0",
    "pillow==12.2.0",
    "tqdm==4.67.1",
    "pandas==3.0.3",
    "lmdb==2.2.0",
    "accelerate==1.13.0",
    "timm==1.0.27",
    "pytest==9.0.3",
    "peft>=0.12.0",
    "sacrebleu>=2.4.0",
    "rouge-score>=0.1.2",
    "pytorch-lightning>=2.0.0",
    "tensorboard>=2.14.0",
]

[tool.uv]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
